# candle-segment-anything-wasm

./: .gitignore  AGETNS.md  Makefile  README.md  index.html  lib-example.html  main.js
wasm/: Cargo.toml  build-lib.sh
wasm/src/: lib.rs
