[package]
name = "candle-segment-anything-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "WebAssembly bindings for running the Segment Anything Model with Candle"
repository = "https://github.com/karlorz/candle-segment-anything-wasm"

[lib]
name = "candle_wasm_example_sam"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "m"
path = "src/bin/m.rs"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
byteorder = "1.4.3"
candle = { package = "candle-core", git = "https://github.com/huggingface/candle.git", rev = "9ca71dee9d9700f2466e0fc8b2fa3e768fff1e89" }
candle-nn = { package = "candle-nn", git = "https://github.com/huggingface/candle.git", rev = "9ca71dee9d9700f2466e0fc8b2fa3e768fff1e89" }
candle-transformers = { package = "candle-transformers", git = "https://github.com/huggingface/candle.git", rev = "9ca71dee9d9700f2466e0fc8b2fa3e768fff1e89" }
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.3", features = ["wasm_js"] }
image = { version = "0.25.2", default-features = false, features = ["jpeg", "png"] }
log = "0.4"
num-traits = "0.2"
safetensors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2.87"
